Fixed module loading issue